--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "backbone": "~1.0.0",
     "modernizr": "~2.6.2",
 	"masonry": "~3.1.2",
-	"imagesloaded" : "~3.0.4"
+	"imagesloaded" : "~3.0.4",
+	"mustache" : "~0.7.2"
   },
   "devDependencies": {}
 }
